syntax = "proto3";

import "Protos/V1/Models/ReleaseModels.proto";

package daisi.protos.v1;

service ReleasesProto {
    rpc Create(CreateReleaseRequest) returns (CreateReleaseResponse);
    rpc GetReleases(GetReleasesRequest) returns (GetReleasesResponse);
    rpc GetActiveRelease(GetActiveReleaseRequest) returns (GetActiveReleaseResponse);
    rpc Activate(ActivateReleaseRequest) returns (ActivateReleaseResponse);
    rpc TriggerRelease(TriggerReleaseRequest) returns (TriggerReleaseResponse);
    rpc GetBotReleases(GetBotReleasesRequest) returns (GetBotReleasesResponse);
    rpc GetActiveBotRelease(GetActiveBotReleaseRequest) returns (GetActiveBotReleaseResponse);
    rpc ActivateBotRelease(ActivateBotReleaseRequest) returns (ActivateBotReleaseResponse);
}
